<resources>
    <string name="app_name">Workmen Compensation </string>


    <!--Main Activity-->
    <string name="main_hint_insurer">Insurer Name</string>
    <string name="main_hint_rate">Rate</string>
    <string name="main_hint_discount">Discount</string>

    <string name="main_tb_reset">Reset</string>
    <!-- End -->

    <!-- User First Registration -->
    <string-array name="ur_deignation_spinner_array">
        <item>Assisstant Branch Manager</item>
        <item>Branch Manager</item>
        <item>Senior Branch Manager</item>
        <item>Divisional Manager</item>
        <item>Regional Manager</item>
        <item>Other</item>
    </string-array>
    <string name="ur_hint_person_name">UserName</string>
    <string name="ur_hint_desgination">Designation</string>
    <string name="ur_btn_start">Start</string>
    <!-- End -->

    <!--Single Entry-->
    <string name="title_single_entry">Enter Details to add Entry</string>
    <string name="hint_se_salary">Monthly Salary</string>
    <string name="hint_se_no_person">No of persons</string>
    <string name="hint_se_rate">Rate</string>
    <string name="hint_se_ann_salary">Annual Salary</string>
    <string name="hint_se_sum_insured">Sum Insured</string>
    <string name="hint_se_premium">Premium</string>
    <string name="btn_se_reset">Reset</string>
    <string name="btn_se_add">Add Entry</string>
    <string name="se_tb_discard">Discard</string>
    <!--End-->

    <!--Summary ACtivity-->
    <string name="summ_tb_delete">Delete</string>
    <string name="summ_tb_share">Share</string>
    <!--End-->

</resources>


