<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:contentDescription="UIIC Company Logo"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_uiic_0" />

    <EditText
        android:id="@+id/ur_edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/ur_hint_person_name"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/ur_spinner_desig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:entries="@array/ur_deignation_spinner_array"
        android:prompt="@string/ur_hint_desgination" />

    <EditText
        android:id="@+id/ur_edit_other_desig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ur_hint_desgination"
        android:singleLine="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/ur_btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ur_btn_start"
        android:textAllCaps="true" />

</LinearLayout>